criar tela de pre menu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,11 @@
             android:name="com.example.fatecanos.alunosmobile.telas.ListUsuParamActivity"
             android:label="@string/title_activity_list_usu_param"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name="com.example.fatecanos.alunosmobile.telas.PreMenuActivity"
+            android:label="@string/title_activity_pre_menu"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
     </application>
 
 </manifest>
