--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28 // aqui tava 26
+    compileSdkVersion 28 // old SDK version 26
     defaultConfig {
         applicationId "com.example.fatecanos.alunosmobile"
         minSdkVersion 14
-        targetSdkVersion 28 // aqui tava 26
+        targetSdkVersion 28 // old SDK version 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
